# purgo

./: .envrc  .gitignore  LICENSE  Makefile  README.md  cabal.project.freeze  purgo.cabal  shell.nix
example/: Example.purs  Prelude.purs
example/Data/: Maybe.purs
nix/: nixpkgs.json  nixpkgs.nix  purescript.nix
purgo/: Main.hs
purgo/Command/: Compile.hs
src/Cheapskate/: Plate.hs
src/Language/: Go.hs
src/Language/Go/: AST.hs  Ann.hs  Compile.hs  Constants.hs  Crash.hs  Environment.hs  File.hs  Names.hs  Orphans.hs  Printer.hs  Tidy.hs  Types.hs
src/Language/Go/AST/: Traversals.hs
src/Language/Go/Compile/: Assert.hs
test/: Spec.hs
